add prestosql docs